# History-site-restoration

./: .gitignore  AGENT_ENVIRONMENT_SETUP.md
.claude/: settings.local.json
_lib/: pyproject.toml
_lib/crackseg_common/: __init__.py  data_utils.py  dataset.py  losses.py  metrics.py
_literature/: INDEX.md
_literature/notes/: 2017_zhu_cyclegan.md  2024_wu_dadnet.md  2026_cuch-guillen_synthetic-craquelure.md
_literature/topics/: heritage-crack-craquelure-synthesis.md
_research/: RULES.md
crack_detection_SepSAM2/: EXPERIMENTS.md  README.md  sea_setup.py
crack_detection_SepSAM2/configs/: cmc_craq.yaml  (+14 more)
crack_detection_dadnet/: dadnet_model.py  train_dadnet.py
crack_detection_sam2/: EXPERIMENTS.md  README.md  TRAINING_NOTES.md  augment.py  click_sampling.py  craq_prompt_sampling.py  dump_preds_denseseg.py  dump_preds_promptsam2.py  eval_lineproc_craq.py  eval_promptsam2_craq.py  interactive_refine_sam2.py  lineproc.py  model.py  model_decoder_seg.py  model_fused_sam2.py  model_prompt_seg.py  model_prompted_sam2.py  model_seg.py  model_seg_full_fpn.py  predict_click.py  predict_full.py  predict_points_full.py  predict_prompt_overlay.py  predict_refine_full.py  prelabel_draft.py  region_clip.py  threshold_sweep_eval.py  to_cvat_voc.py  train.py  train_click.py  train_craq_promptrefine.py  train_decoder.py  train_prompt.py  train_promptsam2_craq.py
crack_detection_unet/: EXPERIMENTS.md  README.md  train.py
data_generation/: EXPERIMENTS.md  README.md  requirements.txt
rfdetr_heritage/: predict.py  predict_tiled.py  train.py
scripts/: make_four_prelabels.py
(+315 files in other folders)
