[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crackseg_common"
version = "0.1.0"
description = "Shared data/augmentation/metrics/loss utilities for the crack-seg research projects"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["crackseg_common"]
